--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,9 @@
-// @import "styles/variables";
+@import "styles/variables";
 
 // npm depencies
 // @import "~bootstrap/scss/bootstrap";
-// @import "~font-awesome/scss/font-awesome";
+@import "~font-awesome/scss/font-awesome";
 
 // Project specific
-// @import "styles/global";
-// @import "styles/animate";
+@import "styles/global";
+@import "styles/animate";
