--- a/src/components/download/download.html
+++ b/src/components/download/download.html
@@ -8,7 +8,7 @@
         <button class="btn btn-primary text-uppercase"><i class="fa fa-download"></i> Download</button>
       </div>
       <div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-        <img src="http://www.templatemo.com/templates/templatemo_446_boxer/images/software-img.png" class="img-responsive" alt="feature img">
+        <img src="~assets/images/software-img.png" class="img-responsive" alt="feature img">
       </div>
     </div>
   </div>
