--- a/src/components/feature/feature.html
+++ b/src/components/feature/feature.html
@@ -11,7 +11,7 @@
         <p><i class="fa fa-code"></i>Quis autem velis reprehenderit et quis voluptate velit esse quam.</p>
       </div>
       <div class="col-md-6 wow fadeInRight" data-wow-delay="0.6s">
-        <img src="http://www.templatemo.com/templates/templatemo_446_boxer/images/software-img.png" class="img-responsive" alt="feature img">
+        <img src="~assets/images/software-img.png" class="img-responsive" alt="feature img">
       </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-        <img src="http://www.templatemo.com/templates/templatemo_446_boxer/images/software-img.png" class="img-responsive" alt="feature img">
+        <img src="~assets/images/software-img.png" class="img-responsive" alt="feature img">
       </div>
       <div class="col-md-6 wow fadeInUp" data-wow-delay="0.6s">
         <h2 class="text-uppercase">More of Your Software</h2>
