--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -11,7 +11,7 @@
             <a rel="nofollow" href="http://www.facebook.com/templatemo" target="_parent">templatemo</a>. Images by
             <a rel="nofollow" href="http://pixabay.com" target="_blank">Pixabay</a>
           </p>
-          <img src="http://www.templatemo.com/templates/templatemo_446_boxer/images/software-img.png" class="img-responsive" alt="home img">
+          <img src="~assets/images/software-img.png" class="img-responsive" alt="home img">
         </div>
         <div class="col-md-1"></div>
       </div>
